systemd unit: order startup job after network-online.  fixes boot-time iterfaces on f20

--- a/elastic-network-interfaces.service
+++ b/elastic-network-interfaces.service
@@ -2,7 +2,7 @@
 # left in an unconfigured state.
 [Unit]
 Description=Elastic Network Interfaces
-After=network.target syslog.target
+After=network-online.target syslog.target
 
 [Service]
 Type=oneshot
