--- a/pkg/Makefile
+++ b/pkg/Makefile
@@ -1,6 +1,4 @@
-VERSION := 0.3.0
-
 rpm:
 	@make -C ../ build && cp ../goat ./
 	@rpmlint specfile.spec
-	@rpmbuild -ba specfile.spec --define "_sourcedir $$PWD" --define "_version $(VERSION)"
+	@rpmbuild -ba specfile.spec --define "_sourcedir $$PWD" --define "_version $$GOAT_VERSION"
