--- a/centos-package/GNUmakefile
+++ b/centos-package/GNUmakefile
@@ -1,4 +1,4 @@
 rpm:
-	@make -C ../ build && cp ../goat ./
+	@make -C ../ release && cp ../dist/bin/goat ./
 	@rpmlint specfile.spec
 	@rpmbuild -ba specfile.spec --define "_sourcedir $$PWD" --define "_version $$GOAT_VERSION"
