Restructure for vgo friendliness

--- a/rpm-package/GNUmakefile
+++ b/rpm-package/GNUmakefile
@@ -1,13 +1,5 @@
-all: ebs eni
+all: rpm
 
-ebs:
-	-rpmlint ebs/specfile.spec
-	@cd ebs && cp ../../bin/goat-ebs . &&\
-		rpmbuild -ba specfile.spec --define "_sourcedir $$PWD" --define "_version $$GOAT_VERSION"
-
-eni:
-	-rpmlint eni/specfile.spec
-	@cd eni && cp ../../bin/goat-eni . &&\
-		rpmbuild -ba specfile.spec --define "_sourcedir $$PWD" --define "_version $$GOAT_VERSION"
-
-.PHONY: ebs eni
+rpm:
+	-rpmlint specfile.spec
+	@rpmbuild -ba specfile.spec --define "_sourcedir $$PWD" --define "_version $$GOAT_VERSION"
