Add goat configuration to /etc/sysconfig. Fix exec mode warning

--- a/rpm/goat@.service
+++ b/rpm/goat@.service
@@ -6,10 +6,11 @@ After=network.target remote-fs.target
 ConditionPathExists=/usr/sbin/goat
 
 [Service]
+EnvironmentFile=/etc/sysconfig/goat
 Type=oneshot
 User=root
 Group=root
-ExecStart=/usr/sbin/goat "%i"
+ExecStart=/usr/sbin/goat -tagPrefix ${TAG_PREFIX} -logLevel ${LOG_LEVEL} "%i"
 SyslogIdentifier=goat
 
 [Install]
